--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -47,6 +47,13 @@ WWE Universe Manager is a comprehensive desktop application built with modern we
   >
     Secure user management with Argon2 password hashing
   </Card>
+  <Card
+    title="Test Data"
+    icon="database"
+    href="/features/test-data"
+  >
+    Populate your database with sample wrestlers and shows for development
+  </Card>
 </CardGroup>
 
 ## Why WWE Universe Manager?
@@ -70,11 +77,12 @@ WWE Universe Manager is a comprehensive desktop application built with modern we
 
 WWE Universe Manager is built using cutting-edge technologies:
 
-- **Backend**: Rust with Tauri 2.0 framework
+- **Backend**: Rust with Tauri 2.0 framework for desktop app functionality
 - **Frontend**: Leptos (Rust-based web framework) compiled to WebAssembly
-- **Database**: SQLite with Diesel ORM
-- **Styling**: Tailwind CSS v4 with DaisyUI components
-- **Theme**: Custom WWE-themed interface with red/yellow/black color scheme
+- **Database**: SQLite with Diesel ORM for data persistence
+- **Styling**: Tailwind CSS v4 with DaisyUI components and custom WWE theme
+- **UI Theme**: Custom WWE-themed interface with slate/modern dark color scheme
+- **Architecture**: Rust workspace with separate frontend and backend packages
 
 ## Getting Started
 
